feat: integra SoA completa riesgos portal empresa capacitacion y modelo RPM